--- a/MainWindow.xib
+++ b/MainWindow.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.02">
 	<data>
 		<int key="IBDocument.SystemTarget">512</int>
-		<string key="IBDocument.SystemVersion">9E17</string>
+		<string key="IBDocument.SystemVersion">9F33</string>
 		<string key="IBDocument.InterfaceBuilderVersion">670</string>
-		<string key="IBDocument.AppKitVersion">949.33</string>
+		<string key="IBDocument.AppKitVersion">949.34</string>
 		<string key="IBDocument.HIToolboxVersion">352.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="329"/>
+			<integer value="412"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -720,6 +720,7 @@ A</string>
 							<int key="NSvFlags">289</int>
 							<string key="NSFrame">{{183, 20}, {94, 27}}</string>
 							<reference key="NSSuperview" ref="1010856189"/>
+							<reference key="NSWindow"/>
 							<bool key="IBUIOpaque">NO</bool>
 							<bool key="IBUIClipsSubviews">YES</bool>
 							<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -732,6 +733,7 @@ A</string>
 							<int key="NSvFlags">289</int>
 							<string key="NSFrame">{{183, 55}, {94, 27}}</string>
 							<reference key="NSSuperview" ref="1010856189"/>
+							<reference key="NSWindow"/>
 							<bool key="IBUIOpaque">NO</bool>
 							<bool key="IBUIClipsSubviews">YES</bool>
 							<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -744,6 +746,7 @@ A</string>
 							<int key="NSvFlags">292</int>
 							<string key="NSFrame">{{21, 23}, {154, 21}}</string>
 							<reference key="NSSuperview" ref="1010856189"/>
+							<reference key="NSWindow"/>
 							<bool key="IBUIOpaque">NO</bool>
 							<bool key="IBUIClipsSubviews">YES</bool>
 							<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -763,6 +766,7 @@ A</string>
 							<int key="NSvFlags">292</int>
 							<string key="NSFrame">{{20, 58}, {155, 21}}</string>
 							<reference key="NSSuperview" ref="1010856189"/>
+							<reference key="NSWindow"/>
 							<bool key="IBUIOpaque">NO</bool>
 							<bool key="IBUIClipsSubviews">YES</bool>
 							<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -777,6 +781,7 @@ A</string>
 							<int key="NSvFlags">289</int>
 							<string key="NSFrame">{{183, 90}, {94, 27}}</string>
 							<reference key="NSSuperview" ref="1010856189"/>
+							<reference key="NSWindow"/>
 							<bool key="IBUIOpaque">NO</bool>
 							<bool key="IBUIClipsSubviews">YES</bool>
 							<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -789,6 +794,7 @@ A</string>
 							<int key="NSvFlags">292</int>
 							<string key="NSFrame">{{20, 93}, {155, 21}}</string>
 							<reference key="NSSuperview" ref="1010856189"/>
+							<reference key="NSWindow"/>
 							<bool key="IBUIOpaque">NO</bool>
 							<bool key="IBUIClipsSubviews">YES</bool>
 							<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -803,6 +809,7 @@ A</string>
 							<int key="NSvFlags">292</int>
 							<string key="NSFrame">{{20, 128}, {155, 21}}</string>
 							<reference key="NSSuperview" ref="1010856189"/>
+							<reference key="NSWindow"/>
 							<bool key="IBUIOpaque">NO</bool>
 							<bool key="IBUIClipsSubviews">YES</bool>
 							<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -817,6 +824,7 @@ A</string>
 							<int key="NSvFlags">289</int>
 							<string key="NSFrame">{{183, 125}, {94, 31}}</string>
 							<reference key="NSSuperview" ref="1010856189"/>
+							<reference key="NSWindow"/>
 							<bool key="IBUIOpaque">NO</bool>
 							<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 							<int key="IBUIContentVerticalAlignment">0</int>
@@ -838,6 +846,7 @@ A</string>
 					</object>
 					<string key="NSFrameSize">{320, 367}</string>
 					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<object class="NSColor" key="IBUIBackgroundColor">
 						<int key="NSColorSpace">3</int>
 						<bytes key="NSWhite">MQA</bytes>
@@ -969,7 +978,7 @@ A</string>
 			<object class="IBUIViewController" id="833577284">
 				<string key="IBUITitle">About</string>
 				<object class="IBUIView" key="IBUIView" id="358934498">
-					<nil key="NSNextResponder"/>
+					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">274</int>
 					<object class="NSMutableArray" key="NSSubviews">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -988,31 +997,32 @@ A</string>
 							<float key="IBUIMaximumZoomScale">0.000000e+00</float>
 							<bool key="IBUIBouncesZoom">NO</bool>
 							<bool key="IBUIEditable">NO</bool>
-							<string type="base64-UTF8" key="IBUIText">Q1NWIFRvdWNoIMKpIE96eW1hbmRpYXMuc2UKClZlcnNpb24gMS44CgpBIHNpbXBsZSBhcHBsaWNhdGlv
-biB0byBkb3dubG9hZCBhbmQgcmVhZCBDU1YgZmlsZXMgZnJvbSB0aGUgaW50ZXJuZXQuCgpRdWljayBT
-dGFydAoKMS4gQ2xpY2sg4oCcK+KAnSBidXR0b24gaW4gRmlsZXMgdmlldw0KMi4gRW50ZXIgdGhlIGFk
-ZHJlc3MgdG8geW91ciBDU1YgZmlsZSwgZS5nLiBodHRwOi8vd3d3Lm15ZG9tYWluLmNvbS9teWZpbGUu
-Y3N2CjMuIFdoZW4gZG93bmxvYWQgaXMgZG9uZSwgc2VsZWN0IHlvdXIgZmlsZQo0LiBJZiBubyBpdGVt
-cyBhcmUgdmlzaWJsZSBpbiB0aGUgSXRlbXMgdmlldywgbWFrZSBzdXJlIHlvdSBoYXZlIHRoZSBjb3Jy
-ZWN0IGVuY29kaW5nIHNlbGVjdGVkIGluIFByZWZlcmVuY2VzIC0+IERhdGEuIE5vdGUgdGhhdCBhcyBh
-cyBvZiBub3csIHlvdSBuZWVkIHRvIHJlc3RhcnQgQ1NWIFRvdWNoIGFmdGVyIHNlbGVjdGluZyBhIG5l
-dyBlbmNvZGluZy4NCjUuIFNlbGVjdCDigJxFZGl04oCdIGJ1dHRvbiBpbiBJdGVtcyB2aWV3IGlmIHlv
-dSB3YW50IHRvIHNlbGVjdCB3aGljaCBjb2x1bW5zIHNob3VsZCBiZSB1c2VkIGZvciBzb3J0aW5nICYg
-c2VhcmNoaW5nLiBEZWxldGUgY29sdW1uIHVzaW5nIHRoZSDigJwt4oCdIGJ1dHRvbiBhbmQgcmVhcnJh
-bmdlIGJ5IGNsaWNraW5nIOKAnOKJo+KAnSBhbmQgZHJhZ2dpbmcuIE5vdGUgdGhhdCBpZiB5b3UgZGVs
-ZXRlIGEgY29sdW1uLCB0aGUgY29udGVudCBvZiB0aGlzIGNvbHVtbiB3aWxsIG5vdCBiZSBpbmNsdWRl
-ZCB3aGVuIHNlYXJjaGluZyBmb3IgaXRlbXMuIFNvIGFycmFuZ2UgdGhlIGNvbHVtbnMgaW4geW91ciBw
-cmVmZXJyZWQgc29ydGluZyBvcmRlciwgYW5kIHJlbW92ZSBhbGwgY29sdW1ucyB3aGljaCB5b3Ugd2ls
-bCBuZXZlciB3YW50IHRvIHNlYXJjaCBmb3IgKHR5cGljYWwgZXhhbXBsZSBpcyDigJxOdW1iZXIgb2Yg
-Ym9vayBwYWdlc+KAnSBhbmQgc2ltaWxhciBvbmVzKQ0KNi4gVG8gc2VlIGFsbCBpbmZvIGFib3V0IGEg
-c3BlY2lmaWMgaXRlbSwgY2xpY2sgaXQgdG8gZ2V0IHRvIERldGFpbHMgdmlldy4gVGhlcmUgYXJlIHRo
-cmVlIGRpZmZlcmVudCBkZXRhaWxzIHZpZXdzOyB1c2UgdGhlIHVwcGVyLXJpZ2h0IGJ1dHRvbiB0byB0
-b2dnbGUgYmV0d2VlbiB0aGVtLg</string>
+							<string type="base64-UTF8" key="IBUIText">Q1NWIFRvdWNoIMKpIE96eW1hbmRpYXMuc2UKClZlcnNpb24gMS44LjEKCkEgc2ltcGxlIGFwcGxpY2F0
+aW9uIHRvIGRvd25sb2FkIGFuZCByZWFkIENTViBmaWxlcyBmcm9tIHRoZSBpbnRlcm5ldC4KClF1aWNr
+IFN0YXJ0CgoxLiBDbGljayDigJwr4oCdIGJ1dHRvbiBpbiBGaWxlcyB2aWV3DQoyLiBFbnRlciB0aGUg
+YWRkcmVzcyB0byB5b3VyIENTViBmaWxlLCBlLmcuIGh0dHA6Ly93d3cubXlkb21haW4uY29tL215Zmls
+ZS5jc3YKMy4gV2hlbiBkb3dubG9hZCBpcyBkb25lLCBzZWxlY3QgeW91ciBmaWxlCjQuIElmIG5vIGl0
+ZW1zIGFyZSB2aXNpYmxlIGluIHRoZSBJdGVtcyB2aWV3LCBtYWtlIHN1cmUgeW91IGhhdmUgdGhlIGNv
+cnJlY3QgZW5jb2Rpbmcgc2VsZWN0ZWQgaW4gUHJlZmVyZW5jZXMgLT4gRGF0YS4gTm90ZSB0aGF0IGFz
+IGFzIG9mIG5vdywgeW91IG5lZWQgdG8gcmVzdGFydCBDU1YgVG91Y2ggYWZ0ZXIgc2VsZWN0aW5nIGEg
+bmV3IGVuY29kaW5nLg0KNS4gU2VsZWN0IOKAnEVkaXTigJ0gYnV0dG9uIGluIEl0ZW1zIHZpZXcgaWYg
+eW91IHdhbnQgdG8gc2VsZWN0IHdoaWNoIGNvbHVtbnMgc2hvdWxkIGJlIHVzZWQgZm9yIHNvcnRpbmcg
+JiBzZWFyY2hpbmcuIERlbGV0ZSBjb2x1bW4gdXNpbmcgdGhlIOKAnC3igJ0gYnV0dG9uIGFuZCByZWFy
+cmFuZ2UgYnkgY2xpY2tpbmcg4oCc4omj4oCdIGFuZCBkcmFnZ2luZy4gTm90ZSB0aGF0IGlmIHlvdSBk
+ZWxldGUgYSBjb2x1bW4sIHRoZSBjb250ZW50IG9mIHRoaXMgY29sdW1uIHdpbGwgbm90IGJlIGluY2x1
+ZGVkIHdoZW4gc2VhcmNoaW5nIGZvciBpdGVtcy4gU28gYXJyYW5nZSB0aGUgY29sdW1ucyBpbiB5b3Vy
+IHByZWZlcnJlZCBzb3J0aW5nIG9yZGVyLCBhbmQgcmVtb3ZlIGFsbCBjb2x1bW5zIHdoaWNoIHlvdSB3
+aWxsIG5ldmVyIHdhbnQgdG8gc2VhcmNoIGZvciAodHlwaWNhbCBleGFtcGxlIGlzIOKAnE51bWJlciBv
+ZiBib29rIHBhZ2Vz4oCdIGFuZCBzaW1pbGFyIG9uZXMpDQo2LiBUbyBzZWUgYWxsIGluZm8gYWJvdXQg
+YSBzcGVjaWZpYyBpdGVtLCBjbGljayBpdCB0byBnZXQgdG8gRGV0YWlscyB2aWV3LiBUaGVyZSBhcmUg
+dGhyZWUgZGlmZmVyZW50IGRldGFpbHMgdmlld3M7IHVzZSB0aGUgdXBwZXItcmlnaHQgYnV0dG9uIHRv
+IHRvZ2dsZSBiZXR3ZWVuIHRoZW0uA</string>
 							<reference key="IBUIFont" ref="647398949"/>
 							<int key="IBUIMarginTop">0</int>
 						</object>
 					</object>
 					<string key="NSFrameSize">{320, 367}</string>
+					<reference key="NSSuperview"/>
 					<object class="NSColor" key="IBUIBackgroundColor">
 						<int key="NSColorSpace">3</int>
 						<bytes key="NSWhite">MQA</bytes>
@@ -2721,7 +2731,7 @@ b2dnbGUgYmV0d2VlbiB0aGVtLg</string>
 					<string>{{120, 246}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>OzyRotatableViewController</string>
-					<string>{{563, 252}, {320, 480}}</string>
+					<string>{{245, 252}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>OzyRotatableViewController</string>
 					<string>{{316, 276}, {320, 480}}</string>
